--- a/src/asciidoc/project/jts/introduction.adoc
+++ b/src/asciidoc/project/jts/introduction.adoc
@@ -1,4 +1,4 @@
-=== Introduction
+= Introduction
 
 Since the release of {parentProduct} 4.1, the Web Services Transaction product has been merged into {parentProduct}. {parentProduct} is thus a single product that is compliant with all of the major distributed transaction standards and specifications.
 
@@ -6,9 +6,9 @@ Knowledge of Web Services is not required to administer a {parentProduct} instal
 This, administrative tasks are separated when they touch only one component or the other.
 
 Apart from ensuring that the run-time system is executing normally, there is little continuous administration needed for the {productName} software.
-Refer to link:#important_points_for_administrators[following list] for some specific concerns:
+Refer to Refer to <<_important_points_for_administrators>> for some specific concerns:
 
-[#important_points_for_administrators]
+[#_important_points_for_administrators]
 * The present implementation of the {productName} system provides no security or protection for data.
 The objects stored in the {productName} object store are (typically) owned by the user who ran the application that created them.
 The Object Store and Object Manager facilities make no attempt to enforce even the limited form of protection that Unix/Windows provides.
@@ -17,9 +17,9 @@ There is no checking of user or group IDs on access to objects for either readin
 This means that the Object Store gradually accumulates garbage (especially during application development and testing phases).
 At present we have no automated garbage collection facility.
 Further, we have not addressed the problem of dangling references.
-That is, a persistent object, ``B``, may have stored a Uid for another persistent object, B, in its passive representation on disk.
-There is nothing to prevent an application from deleting B even though ``B`` still contains a reference to it.
-When ``B`` is next activated and attempts to access B, a run-time error will occur.
+That is, a persistent object, `A`, may have stored a Uid for another persistent object, `B`, in its passive representation on disk.
+There is nothing to prevent an application from deleting `B` even though `A` still contains a reference to it.
+When `A` is next activated and attempts to access `B`, a run-time error will occur.
 * There is presently no support for version control of objects or database reconfiguration in the event of class structure changes.
 This is a complex research area that we have not addressed.
 At present, if you change the definition of a class of persistent objects, you are entirely responsible for ensuring that existing instances of the object in the Object Store are converted to the new representation.
